# cfn-custom-resource

./: Cargo.toml  README.md
src/: lib.rs
tests/: test_delete_event.json  test_serialize.rs
